fixed spacing around weather icon

--- a/css/style.css
+++ b/css/style.css
@@ -38,14 +38,19 @@ grid-column-gap: 1rem;
     border-radius: 2%;
     background-color: #ffffff1f;
     backdrop-filter: blur(10px);
-    justify-content: center;
-    min-height: 100%;
+   position: relative;
+    min-height: 75%;
+    max-height: 75%;
   
 }
 
 
 
+#temperature{
 
+padding-top: 12rem;
+
+}
 
 .nav-item{
     margin: 5% 10%;
@@ -139,25 +144,15 @@ button{
 }
 
 
-.first-image {
-
-    opacity: 1;
-   position: absolute;
-    z-index: 1;
-
-}
-
-.second-image {
+#first-image, #second-image, #third-image {
 
     position: absolute;
-    z-index: 2;
+   
+    left: 8rem;
+ 
 }
 
-.third-image{
 
-    position: absolute;
-    z-index: 3;
-}
 
 @keyframes change-icon {
     0% {
@@ -188,13 +183,11 @@ display: none;
 
 @keyframes change-icon-entry {
     0% {
-        transform: rotateY(-100deg);
-        transform-origin: right;
+        transform: translateZ(700px) translateX(400px);
         opacity: 0;
       }
       100% {
-        transform: rotateY(0);
-        transform-origin: right;
+        transform: translateZ(0) translateX(0);
         opacity: 1;
       }
 }
